Fix alignment issue in the footer and change color of button background and hover

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,15 @@
     border: none;
 }
 
-#page-container {
+body {
     font-family: 'Darumadrop One', cursive;
     text-align: center;
+
+}
+
+#page-container {
+
     width: 100vw;
-    height: 100vh;
     background: url("../images/new-york.jpg");
     background-size: cover;
     position: relative;
@@ -18,9 +22,6 @@
 
 }
 
-#content-wrap {
-    padding-bottom: 8.5rem;
-}
 
 /* --------- Main heading */
 
@@ -38,11 +39,11 @@
 
 .quiz-area {
     width: 80%;
-    max-width: 500px;
+    max-width: 600px;
     margin: 60px auto 0;
     border-radius: 20px;
-    padding: 20px;
-    background-color: white;
+    padding: 30px;
+    background-color: rgb(223, 220, 239, .4);
 
 }
 
@@ -55,9 +56,9 @@ h2 {
 /* --------- Buttons */
 
 .btn {
-    background: #FFFF;
-    font-size: 18px;
-    font-weight: bold;
+    background: rgb(223, 220, 239, .4);
+    font-family: 'Darumadrop One', cursive;
+    font-size: 20px;
     width: 100%;
     border: 1px solid;
     padding: 10px;
@@ -70,8 +71,8 @@ h2 {
 /* --------- hide the hover effect when users select the button */
 
 .btn:hover:not([disabled]) {
-    background: #AFC5EC;
-    color: #20AEC8ED;
+    background: rgb(223, 220, 239, .9);
+    color: #487FC0;
     box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
 }
 
@@ -90,7 +91,7 @@ h2 {
     margin: 20px auto 0;
     border-radius: 4px;
     cursor: pointer;
-    display: block;
+    display: none;
 
 }
 
@@ -110,20 +111,28 @@ h2 {
 }
 
 
+/* music player */
+#audio-container {
+    display: block;
+    text-align: center;
+    margin: 20px;
+
+}
+
+#audio-container p {
+    font-size: 20px;
+    padding: 20px;
+}
+
 /* footer */
 
 #footer {
     position: absolute;
     bottom: 0;
-    width: 95%;
+    width: 100%;
     height: 8.5rem;
     text-align: center;
     font-size: 20px;
-    margin: 45px;
-}
-
-#footer p {
-    margin-bottom: 10px;
 }
 
 .social-media {
@@ -141,6 +150,5 @@ h2 {
     color: #3a3a3a;
 }
 
-audio {
-    background-color: #F3C5DF;
-}
+
+/* media queries */
